made a stupid coach

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+
+.container {
+  width: 800px;
+  margin: 90px auto
+}
+
+.question {
+  border-left: 3px solid lightgrey
+}
+
+.answer {
+  border-left: 3px solid lightgrey
+}
